Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1058,7 +1058,18 @@ Client hanya perlu berinteraksi dengan 'Satu API' untuk mengakses berbagai layan
 Menyembunyikan Kompleksitas dari berbagai Data Source atau Services, sehingga memudah Client untuk mengambil Data tanpa mengetahui dari mana data tersebut berasal. <br/>
 
 Istilahnya, pada sebuah Restaurant, 'API' itu merupakan Pelayan, 'Client' merupakan Pelanggan yang memesan makanan, dan 'Database & Services'itu seperti Dapur yang membuat makanan. <br/>
-yang mana Pelayan berperan untuk mengantarkan makanan ke pelanggan, sehingga Pelanggan tidak perlu mengetahui Kompleksitas Dapur dan Pelanggan tidak perlu mengetahui dari mana makanan tersebut berasal. <br/>
+yang mana Pelayan berperan untuk mengantarkan makanan ke pelanggan, sehingga Pelanggan tidak perlu mengetahui Kompleksitas Dapur dan Pelanggan tidak perlu mengetahui dari mana makanan tersebut berasal. <br/> <br/>
+
+- How Does "Unified API" work ? <br/>
+(Bagaimana Cara kerja "Unified API" ) <br/> <br/>
+
+-> "Unified API" berperan sebagai "Middle Layer" (Lapisan Tengah) yang berkomunikasi dengan beberapa "Back-end Services" atau "Database" atas nama Client. <br/>
+("atas nama Client" maksudnya adalah "Unified API" mewakili Client untuk berkomunikasi dengan "Back-End Services" & Database, yang mana artinya "Permintaan untuk berkomunikasi" itu sebenernya merupakan Permintaan Client ). <br/>
+<br/>
+Saat Client membuat Request, "Unified API" meneruskannya ke Service terkait, <br/>
+Kemudian "Unified API" mengumpulkan Response, dan mengirimkan "Response yang sudah digabungkan & disederhanakan" ke Client. <br/>
+
+
 
 
 ### 2.6) Gateway in GraphQL
