Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1061,7 +1061,7 @@ Istilahnya, pada sebuah Restaurant, 'API' itu merupakan Pelayan, 'Client' merupa
 yang mana Pelayan berperan untuk mengantarkan makanan ke pelanggan, sehingga Pelanggan tidak perlu mengetahui Kompleksitas Dapur dan Pelanggan tidak perlu mengetahui dari mana makanan tersebut berasal. <br/> <br/>
 
 - How Does "Unified API" work ? <br/>
-(Bagaimana Cara kerja "Unified API" ) <br/> <br/>
+(Bagaimana Cara kerja "Unified API" ) <br/>
 
 -> "Unified API" berperan sebagai "Middle Layer" (Lapisan Tengah) yang berkomunikasi dengan beberapa "Back-end Services" atau "Database" atas nama Client. <br/>
 ("atas nama Client" maksudnya adalah "Unified API" mewakili Client untuk berkomunikasi dengan "Back-End Services" & Database, yang mana artinya "Permintaan untuk berkomunikasi" itu sebenernya merupakan Permintaan Client ). <br/>
