Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1069,7 +1069,19 @@ yang mana Pelayan berperan untuk mengantarkan makanan ke pelanggan, sehingga Pel
 Saat Client membuat Request, "Unified API" meneruskannya ke Service terkait, <br/>
 Kemudian "Unified API" mengumpulkan Response, dan mengirimkan "Response yang sudah digabungkan & disederhanakan" ke Client. <br/>
 
+-> Here is a Basic Flow : <br/>
+(Berikut ini Alur Kerja Dasarnya) <br/>
 
+(1) Client (seperti WebApp) membuat Request ke "Unified API". <br/>
+
+(2) "Unified API" meng-analisa Request yang dikirimkan oleh Client, <br/>
+yakni dengan cara Mengidentifikasi Service atau Database mana yang diperlukan untuk memenuhi Request. <br/>
+
+(3) "Unified API" mem-forward (meneruskan) Request ke Services yang sesuai (seperti User Data, Product Data, dan sebagainya ). <br/>
+
+(4) Services mengirimkan Response (berupa Data) yang diminta ke "Unified API". <br/>
+
+(5) "Unified API" menggabungkan & menyederhanakan Response yang didapatkan dari berbagai Services dan mengirimkannya Response tersebut ke Client. <br/>
 
 
 ### 2.6) Gateway in GraphQL
