Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1083,5 +1083,49 @@ yakni dengan cara Mengidentifikasi Service atau Database mana yang diperlukan un
 
 (5) "Unified API" menggabungkan & menyederhanakan Response yang didapatkan dari berbagai Services dan mengirimkannya Response tersebut ke Client. <br/>
 
-
+>> ^For your information^
+>> **Cara Unified API "Menggabungkan & Menyederhanakan Reponse"** :
+>>
+>> (1) Response berupa Data User :
+>> 		  "user": {
+>> 		      "id": 123,
+>> 		      "name": "John Doe",
+>>
+>> (2) Response berupa Data Orders :
+>> 		  "orders": [
+>> 		        {
+>> 		          "id": 1,
+>> 		          "total": 100,
+>> 		          "products": [
+>>
+>>  (3) Response berupa Data Products : 
+>>  			"products": [
+>>  		            {
+>>  		              "id": "p1",
+>>  		              "name": "Laptop",
+>>  		              "price": 1000
+>>
+>>  (4) Unified Response (Response setelah digabungkan & disederhanakan ) :
+>>  		 	{
+>>  			  "data": {
+>>  			    "user": {
+>>  			      "id": 123,
+>>  			      "name": "John Doe",
+>>  			      "orders": [
+>>  			        {
+>>  			          "id": 1,
+>>  			          "total": 100,
+>>  			          "products": [
+>>			            {
+>>			              "id": "p1",
+>>			              "name": "Laptop",
+>>			              "price": 1000
+>>			            }
+>>			          ]
+>>			        }
+>>			      ]
+>>			    }
+>>			  }
+>>			}
+>>
 ### 2.6) Gateway in GraphQL
