Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1083,8 +1083,8 @@ yakni dengan cara Mengidentifikasi Service atau Database mana yang diperlukan un
 
 (5) "Unified API" menggabungkan & menyederhanakan Response yang didapatkan dari berbagai Services dan mengirimkannya Response tersebut ke Client. <br/>
 
->> ^For your information^
->> **Cara Unified API "Menggabungkan & Menyederhanakan Reponse"** :
+>> ^For your information^  <br/>
+>> **Cara Unified API "Menggabungkan & Menyederhanakan Reponse"** :  <br/>
 >>
 >> (1) Response berupa Data User :
 >> ```
