Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1136,4 +1136,17 @@ yakni dengan cara Mengidentifikasi Service atau Database mana yang diperlukan un
 >>			}
 >> ```
 >>
+>> 
+
+- Misalnya pada E-Commerce Platform, kita mempunyai Data dengan kategori "Users", "Orders", dan "Products". <br/>
+Pada "Traditional API", kita perlu mempunyai API terpisah untuk masing-masing kategori data, <br/>
+yaitu API : <br/>
+
+(1) sebuah "User API" = untuk menangani User Data <br/>
+(2) sebuah "Order API" = untuk menangani Order Data <br/>
+(3) sebuha "Product API = untuk menangani Product Data <br/>
+
+Pada "Traditional API", setiap API memiliki Endpoint Sendiri, yang mengharuskan Client untuk berinteraksi dengan masing-masing API secara individual. <br/>
+
+
 ### 2.6) Gateway in GraphQL
