Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1147,6 +1147,9 @@ yaitu API : <br/>
 (3) sebuha "Product API = untuk menangani Product Data <br/>
 
 Pada "Traditional API", setiap API memiliki Endpoint Sendiri, yang mengharuskan Client untuk berinteraksi dengan masing-masing API secara individual. <br/>
-
+(Jika pada Traditional API, kita membutuhkan tiga Endpoint). <br/>
+<br/>
+"Unified API" menyatukan Semua API Individual, <br/>
+sehingga Client hanya berinteraksi dengan Satu Endpoint (Single Endpoint) daripada perlu berinteraksi dengan Tiga Endpoint. <br/>
 
 ### 2.6) Gateway in GraphQL
