--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1152,4 +1152,40 @@ Pada "Traditional API", setiap API memiliki Endpoint Sendiri, yang mengharuskan 
 "Unified API" menyatukan Semua API Individual, <br/>
 sehingga Client hanya berinteraksi dengan Satu Endpoint (Single Endpoint) daripada perlu berinteraksi dengan Tiga Endpoint. <br/>
 
+
+- Contoh Query menggunakan "Unified API" :
+
+-> Misalnya Client menulis Query untuk meminta Data mengenai "User", dan "Order" yang dipesan, serta informasi "Product" pada setiap Order.
+(berarti Client meminta tiga data, yaitu "User", "Order", dan "Order").
+
+Berikut ini contoh Query yang dikirimkan Client :
+
+		{
+		  "data": {
+		    "user": {
+		      "id": 1,
+		      "name": "Jane Doe",
+		      "orders": [
+		        {
+		          "id": 101,
+		          "date": "2024-01-15",
+		          "products": [
+		            {
+		              "id": 1001,
+		              "name": "Laptop",
+		              "price": 1200
+		            },
+		            {
+		              "id": 1002,
+		              "name": "Mouse",
+		              "price": 25
+		            }
+		          ]
+		        }
+		      ]
+		    }
+		  }
+		}
+
+ 
 ### 2.6) Gateway in GraphQL
