Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1189,5 +1189,15 @@ Berikut ini contoh Query yang dikirimkan Client :
 
  ```
 
+-> Bagaimana "Unified API" memproses Query : <br/>
+
+(1) "Unified API" menerima Request Query dari Client dan melihat Client membutuhkan "User Data", "Order Data", dan "Product Data".  <br/>
+
+(2) "Unified API" mengirim Request ke "User Service" , "Order Service", dan "Product Service".  <br/>
+
+(3) Setiap Service me-response dengan mengirimkan datanya masing-masing :  <br/>
+[-] "User Service" mengirim data mengenai "Detail User"  <br/>
+[-] "Order Service" mengirim data mengenai "Riwayat Order" (Riwayat Pemesanan)  <br/>
+[-] "Product Service" mengirim data mengenai  "informasi Produk"  <br/>
 
 ### 2.6) Gateway in GraphQL
