Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1144,7 +1144,7 @@ yaitu API : <br/>
 
 (1) sebuah "User API" = untuk menangani User Data <br/>
 (2) sebuah "Order API" = untuk menangani Order Data <br/>
-(3) sebuha "Product API = untuk menangani Product Data <br/>
+(3) sebuah "Product API = untuk menangani Product Data <br/>
 
 Pada "Traditional API", setiap API memiliki Endpoint Sendiri, yang mengharuskan Client untuk berinteraksi dengan masing-masing API secara individual. <br/>
 (Jika pada Traditional API, kita membutuhkan tiga Endpoint). <br/>
