Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1200,4 +1200,35 @@ Berikut ini contoh Query yang dikirimkan Client :
 [-] "Order Service" mengirim data mengenai "Riwayat Order" (Riwayat Pemesanan)  <br/>
 [-] "Product Service" mengirim data mengenai  "informasi Produk"  <br/>
 
+(4) "Unified API" menggabungkan data-data yang dikirim dari Semua Service menjadi Satu Response.
+Berikut ini Response yang sudah digabungkan oleh "Unified API" :
+
+		{
+		  "data": {
+		    "user": {
+		      "id": 1,
+		      "name": "Jane Doe",
+		      "orders": [
+		        {
+		          "id": 101,
+		          "date": "2024-01-15",
+		          "products": [
+		            {
+		              "id": 1001,
+		              "name": "Laptop",
+		              "price": 1200
+		            },
+		            {
+		              "id": 1002,
+		              "name": "Mouse",
+		              "price": 25
+		            }
+		          ]
+		        }
+		      ]
+		    }
+		  }
+		}
+
+
 ### 2.6) Gateway in GraphQL
