Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1035,7 +1035,13 @@ Dan "Unified Response" inilah yang akan dikirimkan ke Client.
 ### 2.5) Unified API
   <br/>   <br/>
 
-- "Unified API" menggabungkan API untuk semua layanan menjadi satu, yang mana berarti kita hanya perlu menggunakan Satu API untuk banyak layanan.
+- API (Application Programming Interface) merupakan tools yang memungkinkan Aplikasi atau System yang berbeda untuk berkomunikasi antara satu sama lain. <br/>
+  
+- Bayangkan kita memiliki aplikasi cuaca (Weather App), dan kita ingin mendapatkan informasi cuaca terkini.  <br/>
+Aplikasi itu sendiri tidak memiliki semua data cuaca,  aplikasi tersebut perlu memintanya dari server yang menyimpan data ini. <br/>
+yang mana, API meminta informasi cuaca ke server dan mendapatkan respons.  <br/>
+
+- "Unified API" menggabungkan API untuk semua layanan menjadi satu, yang mana berarti kita hanya perlu menggunakan Satu API untuk banyak layanan. <br/>
 Daripada memiliki API terpisah untuk setiap layanan (seperti satu API untuk Sistem Pembayaran, Satu API lainnya untuk Social Media, dan Satu API lagi untuk Data Storage),
 Unified API menggabungkan semua layanan tersebut menjadi satu. <br/> <br/>
   
