Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1237,4 +1237,10 @@ Berikut ini Response yang sudah digabungkan oleh "Unified API" :
 		}
 
 
-### 2.6) Gateway in GraphQL
+### 2.6) Gateway in GraphQL  <br/>  <br/>
+
+
+- Gateway (pada Federated GraphQL) bertindak sebagai "Central Hub" yang mengelola komunikasi antara Client dan Multiple Subgraphs.  <br/>
+Gateway menangani Query yang masuk dari Client, kemudian Gateway mencari tahu Subgraph mana yang berisi Data yang diperlukan oleh Client,  <br/>
+kemudian menggabungkan Semua Results yang dikirimkan oleh Semua Subgraph menjadi "Single Response" (Satu Response).  <br/>  <br/>
+
