Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1244,3 +1244,14 @@ Berikut ini Response yang sudah digabungkan oleh "Unified API" :
 Gateway menangani Query yang masuk dari Client, kemudian Gateway mencari tahu Subgraph mana yang berisi Data yang diperlukan oleh Client,  <br/>
 kemudian menggabungkan Semua Results yang dikirimkan oleh Semua Subgraph menjadi "Single Response" (Satu Response).  <br/>  <br/>
 
+
+- How the Gateway Works - Step by Step : <br/>
+(Cara Kerja Gateway - Step by Step) <br/>
+
+(1) Client Sends a Query : <br/>
+-> Client mengirim GraphQL Query, yang mana Query tersebut mungkin memerlukan Data dari beberapa tempat (Subgraph). <br/>
+<br/>
+contohnya jika Client membuat Query untuk mengambil Data mengenai "User" & "Order" (Order yang dipesan oleh User). <br/>
+Data mengenai User, disimpan pada "User Subgraph". <br/>
+Sedangkan Data mengenai Order, disimpan pada "Order Subgraph". <br/>
+
