Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1255,3 +1255,22 @@ contohnya jika Client membuat Query untuk mengambil Data mengenai "User" & "Orde
 Data mengenai User, disimpan pada "User Subgraph". <br/>
 Sedangkan Data mengenai Order, disimpan pada "Order Subgraph". <br/>
 
+-> Contoh Query yang dikirimkan oleh Client : 
+
+```
+	query {
+	  user(id: 123) {
+	    id
+	    name
+	    orders {
+	      id
+	      total
+	      products {
+	        id
+	        name
+	      }
+	    }
+	  }
+	}
+```
+
