--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1274,3 +1274,32 @@ Sedangkan Data mengenai Order, disimpan pada "Order Subgraph". <br/>
 	}
 ```
 
+Query diatas meminta :
+[-] User Data : 
+Query diatas meminta User Data berupa id, name.
+yang mana ini didapatkan dari "User Subgraph"
+
+	```
+	 user(id: 123) {
+		    id
+		    name
+	```
+
+[-] Orders Data :
+Query diatas meminta Orders Data berupa id, total.
+yang mana ini didapatkan dari "Orders Subgraph"
+```
+	    orders {
+	      id
+	      total
+```
+
+[-] Products Data : 
+Query diatas meminta Products Data berupa id, name.
+yang mana ini didapatkan dari "Products Subgraph".
+```
+	      products {
+	        id
+	        name
+	      }
+```
