Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1274,7 +1274,7 @@ Sedangkan Data mengenai Order, disimpan pada "Order Subgraph". <br/>
 	}
 ```
 
-Query diatas meminta :
+Query diatas meminta : <br/>
 [-] User Data : 
 Query diatas meminta User Data berupa id, name.
 yang mana ini didapatkan dari "User Subgraph"
