Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1303,3 +1303,23 @@ yang mana ini didapatkan dari "Products Subgraph".
 	        name
 	      }
 ```
+
+
+(2) Gateway Splits The Query :  <br/>
+(Gateway Membagi Query) <br/>
+<br/>
+Gateway membagi Query yang masuk berdasarkan Subgraph mana yang berisi Data yang diminta.<br/>
+<br/>
+Contoh pembagian Subgraph berdasarkan query yang dikirimkan oleh Client diatas : <br/>
+[-] User Subgraph : <br/>
+bertanggung jawab atas Data yang terkait dengan User (misalnya id, name). <br/>
+[-] Orders Subgraph : <br/>
+bertanggung jawab atas Data yang terkait dengan Orders (misalnya id, total).<br/>
+[-] Products Subgraph : <br/>
+bertanggung jawab atas Data yang terkait dengan Products (misalnya id, name). <br/>
+<br/>
+Gateway Memberi Rute (Mengarahkan) bagian Query ke Subgraph yang sesuai.<br/>
+Berarti Data User diarahkan ke "User Subgraph", <br/>
+Data Order diarahkan ke  "Order Subgraph", <br/>
+Data Products diarahkan ke "Products Subgraph". <br/>
+
