Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1323,5 +1323,16 @@ bertanggung jawab atas Data yang terkait dengan Products (misalnya id, name). <b
 Gateway Memberi Rute (Mengarahkan) bagian Query ke Subgraph yang sesuai.<br/>
 Berarti Data User diarahkan ke "User Subgraph", <br/>
 Data Order diarahkan ke  "Order Subgraph", <br/>
-Data Products diarahkan ke "Products Subgraph". <br/>
+Data Products diarahkan ke "Products Subgraph". <br/> 
+<br/>
 
+(3) Subgraph Process Their Part oF Query :  <br/>
+(Subgraph memproses bagian Query mereka) <br/>
+<br/>
+Setiap Subgraph menerima bagian Query yang relevant bagi mereka : <br/>
+[-] "User Subgraph" menerima permintaan Query untuk Data User (id, name). <br/>
+[-] "Order Subgraph"  menerima permintaan Query untuk Data Order (id, total). <br/>
+[-] "Product Subgraph"  menerima permintaan Query untuk Data Product (id, name). <br/>
+<br/>
+Setiap Subgraph memproses bagian Query secara independen, <br/>
+yakni masing-masing Subgraph mengambil Data dari Data Source (seperti Database atau Service). <br/>
