Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1338,5 +1338,5 @@ Setiap Subgraph menerima bagian Query yang relevant bagi mereka : <br/>
 Setiap Subgraph memproses bagian Query secara independen, <br/>
 yakni masing-masing Subgraph mengambil Data dari Data Source (seperti Database atau Service). <br/>
 
->> ^For your information^
+>> ^For your information^ <br/>
 >> "Services" & "Database", keduanya dapat bertindak sebagai 'Data Source'.
