Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1340,3 +1340,19 @@ yakni masing-masing Subgraph mengambil Data dari Data Source (seperti Database a
 
 >> ^For your information^ <br/>
 >> "Services" & "Database", keduanya dapat bertindak sebagai 'Data Source'.
+>> 
+ <br/>
+ <br/>
+(4) Subgraphs Return Their Responses to The Gateway :  <br/>
+(Subgraph mengirimkan Response ke Gateway)  <br/>
+ <br/>
+Setelah memproses, Subgraph mengirimkan Response (berupa Data) ke Gateway.  <br/>
+misalnya :  <br/>
+[-] "User Subgraph" mengirim Response berupa Data 'id' dan 'name' dari user.  <br/>
+[-] "Order Subgraph" mengirim Response berupa Data 'id' dan 'total' dari Order(pesanan).  <br/>
+[-] "Product Subgraph" mengirim Response berupa Data 'id' dan 'name' dari Product.  <br/>
+
+>> ^For your information^ <br/>
+>> Semua Subgraph tersebut dapat mengambil Data dari Data Source yang sama atau Data Source yang berbeda. <br/>
+>> (Misalnya "User Subgraph", "Order Subgraph", dan "Product Subgraph" mengambil Data dari Database yang sama, <br/>
+>>  atau pada Skenario lain, Subgraph tersebut mengambil Data dari beberapa Database yang berbeda). <br/>
