Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1356,3 +1356,13 @@ misalnya :  <br/>
 >> Semua Subgraph tersebut dapat mengambil Data dari Data Source yang sama atau Data Source yang berbeda. <br/>
 >> (Misalnya "User Subgraph", "Order Subgraph", dan "Product Subgraph" mengambil Data dari Database yang sama, <br/>
 >>  atau pada Skenario lain, Subgraph tersebut mengambil Data dari beberapa Database yang berbeda). <br/>
+
+<br/>
+<br/>
+[5] Gateway Combines The Response : <br/>
+Setelah Gateway menerima banyak Response dari masing-masing Subgraph, <br/>
+Gateway menggabungkan berbagai Response tersebut menjadi "Single Response" (Satu Response). <br/>
+<br/>
+Pada contoh ini, Gateway mengambil Data yang dikirimkan oleh "User Subgraph", "Order Subgraph", "Product Subgraph" dan menggabungkannya menjadi satu. <br/>
+
+
