Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1364,5 +1364,41 @@ Setelah Gateway menerima banyak Response dari masing-masing Subgraph, <br/>
 Gateway menggabungkan berbagai Response tersebut menjadi "Single Response" (Satu Response). <br/>
 <br/>
 Pada contoh ini, Gateway mengambil Data yang dikirimkan oleh "User Subgraph", "Order Subgraph", "Product Subgraph" dan menggabungkannya menjadi satu. <br/>
+<br/>
+<br/>
 
+[6] Gateway Sends The Final Response to The Client :  <br/>
+(Gateway mengirim Response akhir ke Client) <br/>
+
+Setelah menggabungkan Response dari berbagai Subgraph (berupa Data), Gateway mengirim "Response Lengkap" ke Client. <br/>
+
+Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
+
+```
+	{
+	  "data": {
+	    "user": {
+	      "id": 123,
+	      "name": "John Doe",
+	      "orders": [
+	        {
+	          "id": 1,
+	          "total": 150,
+	          "products": [
+	            {
+	              "id": "p1",
+	              "name": "Laptop"
+	            },
+	            {
+	              "id": "p2",
+	              "name": "Mouse"
+	            }
+	          ]
+	        }
+	      ]
+	    }
+	  }
+	}
+
+```
 
