Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1402,3 +1402,4 @@ Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
 
 ```
 
+### 2.6) Federation Architecture in GraphQL  <br/>  <br/>
