Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1403,3 +1403,7 @@ Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
 ```
 
 ### 2.6) Federation Architecture in GraphQL  <br/>  <br/>
+
+- Federation Architecture adalah cara mengatur GraphQL API yang besar dengan memecahnya menjadi Service yang lebih kecil dan terfokus, dimana Semua Service tersebut dapat bekerja sama sebagai "Unified API" (API terpadu). <br/>
+
+
