Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1405,5 +1405,6 @@ Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
 ### 2.6) Federation Architecture in GraphQL  <br/>  <br/>
 
 - Federation Architecture adalah cara mengatur GraphQL API yang besar dengan memecahnya menjadi Service yang lebih kecil dan terfokus, dimana Semua Service tersebut dapat bekerja sama sebagai "Unified API" (API terpadu). <br/>
-
+yang mana dengan memecahnya menjadi beberapa Service yang lebih kecil, dapat memudahkan berbagai Team yang berbeda untuk membangun & memelihara bagian-bagian terpisah dari sebuah GraphQL API yang besar,  <br/>
+sehingga lebih mudah untuk dikelola & diskalakan. (easier to manageable & Scalable)  <br/>
 
