Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1238,7 +1238,8 @@ Berikut ini Response yang sudah digabungkan oleh "Unified API" :
 
 
 ### 2.6) Gateway in GraphQL  <br/>  <br/>
-
+>> tidak dari Dokumentasi
+>>
 
 - Gateway (pada Federated GraphQL) bertindak sebagai "Central Hub" yang mengelola komunikasi antara Client dan Multiple Subgraphs.  <br/>
 Gateway menangani Query yang masuk dari Client, kemudian Gateway mencari tahu Subgraph mana yang berisi Data yang diperlukan oleh Client,  <br/>
@@ -1403,6 +1404,9 @@ Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
 ```
 
 ### 2.6) Federation Architecture in GraphQL  <br/>  <br/>
+>> tidak dari Dokumentasi
+>>
+
 
 - Federation Architecture adalah cara mengatur GraphQL API yang besar dengan memecahnya menjadi Service yang lebih kecil dan terfokus, dimana Semua Service tersebut dapat bekerja sama sebagai "Unified API" (API terpadu). <br/>
 yang mana dengan memecahnya menjadi beberapa Service yang lebih kecil, dapat memudahkan berbagai Team yang berbeda untuk membangun & memelihara bagian-bagian terpisah dari sebuah GraphQL API yang besar,  <br/>
