Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1033,6 +1033,7 @@ Dan "Unified Response" inilah yang akan dikirimkan ke Client.
 
  
 ### 2.5) Unified API
+>> Penjelasan ini diluar Dokumentasi
   <br/>   <br/>
 
 - API (Application Programming Interface) merupakan tools yang memungkinkan Aplikasi atau System yang berbeda untuk berkomunikasi antara satu sama lain. <br/>
@@ -1238,7 +1239,7 @@ Berikut ini Response yang sudah digabungkan oleh "Unified API" :
 
 
 ### 2.6) Gateway in GraphQL  <br/>  <br/>
->> tidak dari Dokumentasi
+>> Penjelasan ini diluar Dokumentasi
 >>
 
 - Gateway (pada Federated GraphQL) bertindak sebagai "Central Hub" yang mengelola komunikasi antara Client dan Multiple Subgraphs.  <br/>
@@ -1404,8 +1405,7 @@ Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
 ```
 
 ### 2.6) Federation Architecture in GraphQL  <br/>  <br/>
->> tidak dari Dokumentasi
->>
+>> Penjelasan ini diluar Dokumentasi
 
 
 - Federation Architecture adalah cara mengatur GraphQL API yang besar dengan memecahnya menjadi Service yang lebih kecil dan terfokus, dimana Semua Service tersebut dapat bekerja sama sebagai "Unified API" (API terpadu). <br/>
