Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1410,7 +1410,7 @@ Berikut ini contoh "Unified Response" yang dikirim ke Client : <br/>
 
 - Federation Architecture adalah cara mengatur GraphQL API yang besar dengan memecahnya menjadi Service yang lebih kecil dan terfokus, dimana Semua Service tersebut dapat bekerja sama sebagai "Unified API" (API terpadu). <br/>
 yang mana dengan memecahnya menjadi beberapa Service yang lebih kecil, dapat memudahkan berbagai Team yang berbeda untuk membangun & memelihara bagian-bagian terpisah dari sebuah GraphQL API yang besar,  <br/>
-sehingga lebih mudah untuk dikelola & diskalakan. (easier to manageable & Scalable)  <br/> 
+sehingga lebih mudah untuk dikelola & diskalakan. (easier to manage & Scalable)  <br/> 
 Banyak Service yang lebih kecil tersebut merupakan Subgraph, dan Sistem menggabungkan Semua Subgraph menjadi "Unified API".  <br/>
 >> ^For your information^  <br/>
 >> Subgraph dapat dianggap sebagai Service karena meng-ekspos (memaparkan) Data melalui GraphQL Queries,  <br/>
