Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1419,6 +1419,28 @@ Banyak Service yang lebih kecil tersebut merupakan Subgraph, dan Sistem menggabu
  <br/>
 
 
--  **Why Use Federation in GraphQL** :
-(Mengapa menggunakan Federation pada GraphQL)
+-  **Why Use Federation in GraphQL** :  <br/>
+(Mengapa menggunakan Federation pada GraphQL)  <br/>
+
+-> Misalnya terdapat suatu perusahaan besar, dan pada perusahaan tersebut terdapat berbagai Team yang menangani berbagai bagian berbeda, seperti 'Team A' menangani bagian User Account, 'Team B' menangani bagian Product, dan 'Team C' menangani Order. <br/>
+Tanda Federation Architecture (tanpa memecah GraphQL API menjadi banyak Service yang lebih kecil), <br/>
+maka hal ini dapat mengakibatkan : <br/>
+[-] Complexity : <br/>
+Sulit untuk mengelola atau meng-update satu skema yang besar. <br/> 
+
+[-] Conflict : <br/>
+Team mungkin secara tidak sengaja menganggu pekerjaan satu sama lain. <br/>
+
+[-] Bottlenecks :  <br/>
+Setiap perubahan kecil dapat memerlukan Update Penuh untuk keseluruhan Skema. <br/> <br/>
+
+
+-> "GraphQL Federation" mengatasi masalah ini dengan mengizinkan setiap tim untuk bekerja secara independen pada **subgraph** tertentu sementara sistem menggabungkan semua subgraph menjadi satu Unified API. <br/>
+
+>> ^For your information^ <br/>
+>> Secara umum, "Federation Architecture" merupakan Design Approach yang memungkinkan beberapa System atau beberapa Service yang independen untuk bekerja bersama sebagai satu kesatuan yang utuh. <br/>
+
+
+
+
 
