Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1435,7 +1435,7 @@ Team mungkin secara tidak sengaja menganggu pekerjaan satu sama lain. <br/>
 Setiap perubahan kecil dapat memerlukan Update Penuh untuk keseluruhan Skema. <br/> <br/>
 
 
--> "GraphQL Federation" mengatasi masalah ini dengan mengizinkan setiap tim untuk bekerja secara independen pada **subgraph** tertentu sementara sistem menggabungkan semua subgraph menjadi satu Unified API. <br/>
+ "GraphQL Federation" mengatasi masalah ini dengan mengizinkan setiap tim untuk bekerja secara independen pada **subgraph** tertentu, kemudian sistem menggabungkan semua subgraph menjadi satu Unified API. <br/>
 
 >> ^For your information^ <br/>
 >> Secara umum, "Federation Architecture" merupakan Design Approach yang memungkinkan beberapa System atau beberapa Service yang independen untuk bekerja bersama sebagai satu kesatuan yang utuh. <br/>
