Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1440,7 +1440,13 @@ Setiap perubahan kecil dapat memerlukan Update Penuh untuk keseluruhan Skema. <b
 >> ^For your information^ <br/>
 >> Secara umum, "Federation Architecture" merupakan Design Approach yang memungkinkan beberapa System atau beberapa Service yang independen untuk bekerja bersama sebagai satu kesatuan yang utuh. <br/>
 
+- Key Components of GraphQL Federation : <br/>
+(Komponen Utama pada GraphQL Federation) <br/>
 
+Federation Architecture pada GraphQL, melibatkan Tiga Komponen Utama, <br/>
+yaitu : "Subgraph", "Gateway", dan "Supergraph". <br/>
+
+Berikut ini Pejelasannya : <br/>
 
 
 
