Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1448,5 +1448,21 @@ yaitu : "Subgraph", "Gateway", dan "Supergraph". <br/>
 
 Berikut ini Pejelasannya : <br/>
 
+(1) **Subgraph** : <br/>
+Subgraph merupakan bagian-bagian kecil dari GraphQL API yang lebih kecil dan terfokus yang menangani Satu Area tertentu. <br/>
 
+Contoh Subgraph : <br/>
+
+(1) Users Subgraph : <br/>
+Subgraph ini mengelola Data User, seperti User Information, <br/>
+User Profiles, User Addresses, dan Data Login <br/>
+
+(2) Products Subgraph : <br/>
+Menangani Data Product, seperti Product Listing (Daftar Produk), Product Category, dan Product Inventory. <br/>
+
+(3) Orders Subgraph : <br/>
+Menangani Data Order, seperti Order Creation (Pembuatan Pesanan), Order Tracking (Pelacakan Pesanan) , dan Order Payments (Pembayaran Pesanan). <br/>
+<br/>
+
+Setiap subgraph dikelola dan diperbarui secara independen oleh tim yang bertanggung jawab atas Subgraph tersebut.
 
