Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1468,3 +1468,25 @@ Setiap subgraph dikelola dan diperbarui secara independen oleh tim yang bertangg
 
 >> .
 >> .
+<br/>
+<br/>
+[2] **Gateway** : <br/>
+<br/>
+Gateway merupakan Komponen Khusus yang berada diantara Client dan Subgraph. <br/>
+<br/>
+>> ^For your Information^ <br/>
+>> "Client" itu seperti Front-End Application yang digunakan oleh User.
+<br/>
+Tugas Gateway adalah : <br/>
+(1) Merge : <br/>
+Menggabungkan semua Subgraph menjadi Satu Skema besar yang disebut Supergraph. <br/>
+(2) Route Queries :<br/>
+Mengarahkan atau memberi Rute pada Query ke Subgraph yang mana,  <br/>
+yakni saat Gateway mengetahui Subgraph apa saja yang dibutuhkan oleh Query. <br/>
+(3) Combine Response : <br/>
+Gateway menarik data dari berbagai Subgraph, menggabungkan Data tersebut, dan Gateway mengirimkan Data yang sudah digabungkan tersebut ke Client. <br/>
+
+<br/>
+
+
+ 
