Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1473,10 +1473,10 @@ Setiap subgraph dikelola dan diperbarui secara independen oleh tim yang bertangg
 [2] **Gateway** : <br/>
 <br/>
 Gateway merupakan Komponen Khusus yang berada diantara Client dan Subgraph. <br/>
-<br/>
+
 >> ^For your Information^ <br/>
->> "Client" itu seperti Front-End Application yang digunakan oleh User.
-<br/>
+>> "Client" itu seperti Front-End Application yang digunakan oleh User. <br/> 
+
 Tugas Gateway adalah : <br/>
 (1) Merge : <br/>
 Menggabungkan semua Subgraph menjadi Satu Skema besar yang disebut Supergraph. <br/>
