Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1485,7 +1485,12 @@ yakni saat Gateway mengetahui Subgraph apa saja yang dibutuhkan oleh Query. <br/
 (3) Combine Response : <br/>
 Gateway menarik data dari berbagai Subgraph, menggabungkan Data tersebut, dan Gateway mengirimkan Data yang sudah digabungkan tersebut ke Client. <br/>
 
-<br/>
 
+>> .  <br/>
+>> .  <br/>
+[3] **Supergraph** : <br/>
+Supergraph adalah Schema Unified GraphQL, yang mana Client berinteraksi dengan Supergraph.
+Supergraph merupakan hasil dari penggabungan Semua Subgraph melalui Gateway.
 
- 
+Bagi Client, Supergraph tampak seperti GraphQL API tunggal yang lengkap,
+walaupun GraphQL API tersebut dibangun dari beberapa bagian. 
