Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1467,7 +1467,7 @@ Menangani Data Order, seperti Order Creation (Pembuatan Pesanan), Order Tracking
 Setiap subgraph dikelola dan diperbarui secara independen oleh tim yang bertanggung jawab atas Subgraph tersebut.
 
 >> . <br/>
->> . <br/>
+
 
 [2] **Gateway** : <br/>
 <br/>
@@ -1486,7 +1486,6 @@ yakni saat Gateway mengetahui Subgraph apa saja yang dibutuhkan oleh Query. <br/
 Gateway menarik data dari berbagai Subgraph, menggabungkan Data tersebut, dan Gateway mengirimkan Data yang sudah digabungkan tersebut ke Client. <br/>
 
 >> .  <br/>
->> .  <br/>
 
 
 [3] **Supergraph** : <br/>
@@ -1495,3 +1494,21 @@ Supergraph merupakan hasil dari penggabungan Semua Subgraph melalui Gateway.  <b
  <br/>
 Bagi Client, Supergraph tampak seperti GraphQL API tunggal yang lengkap,  <br/>
 walaupun GraphQL API tersebut dibangun dari beberapa bagian.   <br/>
+
+
+>> .  <br/>
+>> .  <br/>
+>> .  <br/>
+
+- **How GraphQL Federation Works - Step by Step** :  <br/>
+(Cara Kerja GraphQL Federation)   <br/>
+ <br/>
+Contoh sederhana tentang cara kerja Federation GraphQL :  <br/>
+ <br/>
+Misalnya kita mempunyai Aplikasi E-Commerce dengan beberapa Subgraph berikut :  <br/>
+[-] User Subgraph :  <br/>
+Mengelola User Profile & Account Information.  <br/>
+[-] Product Subgraph :  <br/>
+Mengelola Product Listings & Details.  <br/>
+[-] Order Subgraph :   <br/>
+Mengelola Order yang dipesan oleh Customer.  <br/>
