Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1512,3 +1512,22 @@ Mengelola User Profile & Account Information.  <br/>
 Mengelola Product Listings & Details.  <br/>
 [-] Order Subgraph :   <br/>
 Mengelola Order yang dipesan oleh Customer.  <br/>
+
+
+-> Misalnya Client ingin mengambil Data (Fetch Data) mengenai informasi User dan informasi Order yang telah mereka buat, dengan detail tentang setiap produk dalam pesanan. Query yang Client buat untuk Request Data mungkin terlihat seperti ini:
+
+```
+	{
+	  user(id: "1") {
+	    name
+	    orders {
+	      date
+	      product {
+	        name
+	        price
+	      }
+	    }
+	  }
+	}
+
+```
