Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1514,7 +1514,9 @@ Mengelola Product Listings & Details.  <br/>
 Mengelola Order yang dipesan oleh Customer.  <br/>
 
  <br/>
--> Misalnya Client ingin mengambil Data (Fetch Data) mengenai informasi User dan informasi Order yang telah mereka buat, dengan detail tentang setiap produk dalam pesanan. Query yang Client buat untuk Request Data mungkin terlihat seperti ini: 
+-> -> Misalnya Client ingin mengambil Data (Fetch Data) mengenai informasi User dan informasi Order yang telah mereka buat, dengan detail tentang setiap produk dalam pesanan. Query yang Client buat untuk Request Data mungkin terlihat seperti ini:  <br/>
+
+
 
 ```
 	{
