Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1533,3 +1533,35 @@ Mengelola Order yang dipesan oleh Customer.  <br/>
 	}
 
 ```
+
+ <br/>
+-> Berikut ini cara Gateaway memproses Request dari Client :  <br/>
+
+(1) Identify Subgraphs :  <br/>
+(meng-identifikasi Subgraph)  <br/>
+Gateway menganalisa Query dan menentukkan Subgraph mana yang bertanggung jawab untuk setiap bagian data.  <br/>
+analisa nya seperti dibawah ini :   <br/>
+
+[-] User Subgraph :  <br/>
+informasi untuk `user(id: "1")` menjadi tanggung jawab "User Subgraph."  <br/>
+
+	```
+	user(id: "1") {
+	    name
+	```
+
+[-] Order Subgraph :  <br/>
+informasi untuk `date` menjadi tanggung jawab "Order Subgraph"  <br/>
+
+	```
+	 orders {
+	      date
+	```
+
+[-] Product Subgraph :  <br/>
+informasi untuk `name` & `price` menjadi tanggung jawab "Product Subgraph"  <br/>
+	```
+	 product {
+	        name
+	        price
+	```
