Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1567,3 +1567,13 @@ informasi untuk `name` & `price` menjadi tanggung jawab "Product Subgraph"  <br/
 	        name
 	        price
 
+
+
+<br/>
+(2) Fetch Data from Each Subraph : <br/>
+(Mengambil Data dari Setiap Subgraph) <br/>
+Gateway mengirim permintaan untuk mengambil Data ke setiap Subgraph berdasarkan tanggung jawab masing-masing Subgraph. <br/>
+seperti berikut ini : <br/>
+[-] Gateway meminta ke "User Subgraph" mengenai Informasi mengenai User. <br/>
+[-] Gateway meminta ke "Order Subgraph" mengenai Informasi mengenai Order. <br/>
+[-] Gateway meminta ke "Product Subgraph" mengenai Informasi mengenai Order. <br/>
